Fixed visible unstyled spinner for a few seconds.

--- a/web/css/components/_spinner.less
+++ b/web/css/components/_spinner.less
@@ -1,3 +1,8 @@
+& when (@critical) {
+    .loading-mask {
+        display: none;
+    }
+}
 & when not (@critical) {
     .loading-mask {
         &:extend(.inset-0);
